Bug 437485 - Activity Switcher does not shown on Wayland
Summary: Activity Switcher does not shown on Wayland
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Activity Switcher sidebar (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Ivan Čukić
URL:
Keywords: wayland-only
Depends on:
Blocks:
 
Reported: 2021-05-22 09:11 UTC by David Redondo
Modified: 2021-06-26 00:53 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.23
Sentry Crash Report:


Attachments
Desktop context menu (60.06 KB, image/png)
2021-05-22 09:27 UTC, Alex
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David Redondo 2021-05-22 09:11:42 UTC
Press Meta+Tab, switcher does not show

KDE Plasma Version: 5.21.90
KDE Frameworks Version: 5.83
Qt Version: 5.15.2
Comment 1 Alex 2021-05-22 09:26:41 UTC
For me, the shortcut is Alt+D, Alt+A, but this doesn't work for me too. I will attach a screenshot of the menu
Comment 2 Alex 2021-05-22 09:27:03 UTC
Created attachment 138669 [details]
Desktop context menu
Comment 3 David Redondo 2021-05-22 09:28:38 UTC
However it shows for me if I activate this menu entry with the mouse
Comment 4 Bug Janitor Service 2021-06-14 14:17:32 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/499
Comment 5 David Redondo 2021-06-24 08:48:39 UTC
Git commit e2fe0490ea5af63044a72445f43c2e1ce38a08c7 by David Redondo.
Committed on 24/06/2021 at 08:48.
Pushed by davidre into branch 'master'.

Make activity switcher platform independent

There's no need for having 100 lines of X specific code just to
query whether a key is pressed. Because on some window systems
(wayland) a window is needed to get info about modifier keys,
an invisible temporary one is created when plasma does not have focus.

M  +0    -3    imports/activitymanager/CMakeLists.txt
M  +0    -1    imports/activitymanager/sortedactivitiesmodel.cpp
M  +27   -107  imports/activitymanager/switcherbackend.cpp

https://invent.kde.org/plasma/plasma-desktop/commit/e2fe0490ea5af63044a72445f43c2e1ce38a08c7