Make activity switcher platform independent

There's no need for having 100 lines of X specific code just to
query whether a key is pressed. Because on some window systems
(wayland) a window is needed to get info about modifier keys,
an invisible temporary one is created when plasma does not have focus.
BUG:437485